--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@apollo/client": "^3.2.0",
     "@material-ui/core": "^4.11.0",
     "@types/cheerio": "^0.22.22",
+    "@types/cors": "^2.8.8",
     "@types/express": "^4.17.8",
     "@types/react": "^16.9.52",
     "@types/react-dom": "^16.9.8",
@@ -20,6 +21,7 @@
     "axios": "^0.20.0",
     "cheerio": "^1.0.0-rc.3",
     "chrono-node": "^2.1.8",
+    "cors": "^2.8.5",
     "date-fns": "^2.16.1",
     "eslint": "^7.8.0",
     "eslint-config-prettier": "6.12.0",
