--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@types/express": "^4.17.8",
     "@types/react": "^16.9.52",
     "@types/react-dom": "^16.9.8",
+    "@types/styled-components": "^5.1.4",
     "@typescript-eslint/eslint-plugin": "^4.4.1",
     "@typescript-eslint/parser": "^4.4.1",
     "axios": "^0.20.0",
+    "babel-plugin-styled-components": "^1.11.1",
     "cheerio": "^1.0.0-rc.3",
     "chrono-node": "^2.1.8",
     "cors": "^2.8.5",
@@ -40,6 +42,7 @@
     "prettier": "^2.1.2",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
+    "styled-components": "^5.2.0",
     "ts-node": "^9.0.0",
     "ts-node-dev": "^1.0.0",
     "typescript": "4.0.3"
