--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "prettier": "^2.1.2",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
+    "react-waypoint": "^9.0.3",
     "styled-components": "^5.2.0",
     "ts-node": "^9.0.0",
     "ts-node-dev": "^1.0.0",
