--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@apollo/client": "^3.2.0",
     "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "@types/cheerio": "^0.22.22",
     "@types/cors": "^2.8.8",
     "@types/express": "^4.17.8",
